Fixing Contributor Casiano

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     {
       "name": "Casiano Rodríguez León",
       "email": "casiano.rodriguez.leon@gmail.com",
-      "url": "https://github.com/crguezl",
+      "url": "https://www.npmjs.com/~crguezl",
       "contributions": 20,
       "hireable": true
     }
