--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gitbook-setup",
   "version": "1.0.4",
   "description": "This is my first node package that will be for setup gitbook.",
-  "main": "index.js",
+  "main": "./bin/gitbook-setup.js",
   "bin": {
     "gitbook-setup": "./bin/gitbook-setup.js"
   },
@@ -35,7 +35,7 @@
   "bugs": {
     "url": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17/issues"
   },
-  "homepage": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17#readme",
+  "homepage": "https://www.npmjs.com/package/gitbook-setup",
   "directories": {
     "bin": "./bin"
   }
