--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "bugs": {
     "url": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17/issues"
   },
-  "homepage": "https://www.npmjs.com/package/gitbook-setup"
+  "homepage": "https://www.npmjs.com/package/gitbook-setup",
+  "files": [
+    "templates"
+  ]
 }
