Still working on the files field

--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
   },
   "homepage": "https://www.npmjs.com/package/gitbook-setup",
   "files": [
-    "api",
-    "book",
-    "faq"
+    "api"
   ]
 }
