--- a/package.json
+++ b/package.json
@@ -36,8 +36,5 @@
   "bugs": {
     "url": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17/issues"
   },
-  "homepage": "https://www.npmjs.com/package/gitbook-setup",
-  "files": [
-    "api"
-  ]
+  "homepage": "https://www.npmjs.com/package/gitbook-setup"
 }
