--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "dependencies": {
     "contributor": "0.1.x",
+    "fs": "0.0.1-security",
     "gitbook": "^3.2.2",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
@@ -37,5 +38,8 @@
   "bugs": {
     "url": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17/issues"
   },
-  "homepage": "https://www.npmjs.com/package/gitbook-setup"
+  "homepage": "https://www.npmjs.com/package/gitbook-setup",
+  "files": [
+    "./templates/example/"
+  ]
 }
