--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "contributor": "0.1.x",
     "fs": "0.0.1-security",
+    "fs-promise": "^2.0.0",
     "gitbook": "^3.2.2",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
