--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gitbook": "^3.2.2",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
+    "promise": "^7.1.1",
     "shell-task": "^1.0.0",
     "tacks": "^1.2.2"
   },
