--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   ],
   "dependencies": {
     "contributor": "0.1.x",
+    "download": "^5.0.3",
+    "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
     "gitbook": "^3.2.2",
     "inquirer": "^3.0.1",
