--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "contributor": "0.1.x",
-    "download": "^5.0.3",
+    "exec": "^0.2.1",
     "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
     "gitbook": "^3.2.2",
