--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "promise": "^7.1.1",
     "prompt": "^1.0.0",
     "shell-task": "^1.0.0",
+    "shelljs": "^0.7.7",
     "tacks": "^1.2.2"
   },
   "license": "ISC",
