--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "exec": "^0.2.1",
     "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
+    "gh-pages": "^0.12.0",
     "gitbook": "^3.2.2",
     "github": "^9.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "inquirer": "^3.0.1",
     "minimist": "^1.2.0",
     "node-github": "0.0.3",
