--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ncp": "^2.0.0",
     "node-github": "0.0.3",
     "octonode": "^0.7.9",
+    "ora": "^1.3.0",
     "path": "^0.12.7",
     "promise": "^7.1.1",
     "prompt": "^1.0.0",
