--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "^2.2.0",
     "bluebird": "^3.4.7",
+    "cli-spinner": "^0.2.6",
     "contributor": "0.1.x",
     "exec": "^0.2.1",
     "fs-extra": "^2.0.0",
