--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "octonode": "^0.7.9",
     "ora": "^1.3.0",
     "os": "^0.1.1",
+    "passport": "^0.3.2",
     "path": "^0.12.7",
     "promise": "^7.1.1",
     "prompt": "^1.0.0",
