--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cli-spinner": "^0.2.6",
     "contributor": "0.1.x",
     "exec": "^0.2.1",
+    "express": "^4.15.3",
     "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
     "gh-pages": "^0.12.0",
