--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bluebird": "^3.4.7",
     "cli-spinner": "^0.2.6",
     "contributor": "0.1.x",
+    "ejs": "^2.5.6",
     "exec": "^0.2.1",
     "express": "^4.15.3",
     "fs-extra": "^2.0.0",
