Adding the node engine version

--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
   "bugs": {
     "url": "https://github.com/ULL-ESIT-GRADOII-TFG/rudolf-cicko-17/issues"
   },
-  "homepage": "https://www.npmjs.com/package/gitbook-setup"
+  "homepage": "https://www.npmjs.com/package/gitbook-setup",
+  "engines" : { "node" : ">=8.0.0" }
 }
