--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ejs": "^2.5.6",
     "exec": "^0.2.1",
     "express": "^4.15.3",
+    "filepath": "^1.1.0",
     "fs-extra": "^2.0.0",
     "fs-promise": "^2.0.0",
     "gh-pages": "^0.12.0",
