--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "gitbook-setup": "./bin/gitbook-setup.js"
   },
+  "stripts": {
+    "install": "node welcome.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cicko/gitbook-setup.git"
@@ -46,6 +49,7 @@
     "ncp": "^2.0.0",
     "node-github": "0.0.3",
     "octonode": "^0.7.9",
+    "open": "0.0.5",
     "ora": "^1.3.0",
     "os": "^0.1.1",
     "passport": "^0.3.2",
