--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-github": "0.0.3",
     "octonode": "^0.7.9",
     "open": "0.0.5",
+    "opn": "^5.1.0",
     "ora": "^1.3.0",
     "os": "^0.1.1",
     "passport": "^0.3.2",
