--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gitbook-setup": "./bin/gitbook-setup.js"
   },
   "scripts": {
-    "postinstall": "node welcome.js"
+    "postinstall": "open-url https://cicko.github.io/gitbook-setup/"
   },
   "repository": {
     "type": "git",
@@ -50,6 +50,7 @@
     "node-github": "0.0.3",
     "octonode": "^0.7.9",
     "open": "0.0.5",
+    "open-url": "^2.0.2",
     "openurl": "^1.1.1",
     "ora": "^1.3.0",
     "os": "^0.1.1",
